# 2026-war

./: .gitignore  CHANGELOG.md  DEVLOG.md  README.md  dev.py  main.py  pyproject.toml  test.py
R/: state_demos.R
WARP-ideology-analysis/: README.md  WARP.parquet  current_topline.csv  current_topline_x2.csv  full_topline.parquet  merge_with_ideo.R  toplineconvert.R
analyses/WARP-ideology/: README.md  merge_with_ideo.R  rproj.Rproj
data/: candidate_filters.csv  house_candidate_filters.csv  jungle_primaries.csv  presidential_party.csv  senate_candidate_filters.csv  senate_jungle_primaries.csv  state_age_1990_census.csv  state_demos.csv  state_educational_attainment_1990_census.csv  state_educational_attainment_2000_census.csv  state_race_origin_1990_census.csv  state_urbanicity_1990_census.csv
stan/: dev_01.stan  dev_02.stan  dev_03.stan  dev_04.stan  dev_05.stan  dev_06.stan  dev_07.stan  dev_08.stan  dev_09.stan  dev_10.stan  dev_11.stan  dev_12.stan  dev_13.stan  dev_14.stan  distributions.stan  functions.stan  generated_quantities.stan  utils.stan  war.stan
war/: data.py  model.py  results.py
war/utils/: constants.py  model.py  transformations.py
