[project]
name = "war"
version = "1.0.0"
description = ""
authors = [
    {name = "markjrieke",email = "markjrieke@gmail.com"}
]
readme = "README.md"
requires-python = "3.13.2"
dependencies = [
    "polars==1.30.0",
    "cmdstanpy==1.2.5",
    "arviz==0.21.0",
    "pyarrow==20.0.0"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
plotnine = "0.14.6"
